# raft

./: .gitignore  Dockerfile  README.md  esbuild.cjs  eslint.config.js  jest.config.cjs  package.json  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yml
raft/: Cargo.toml
raft/client/: Cargo.toml
raft/server/: Cargo.toml  build.rs  deleteme.rs  election.rs  main.rs  rpc_server.rs  rpc_util.rs  server.rs  state.rs  update.rs  util.rs  web_server.rs
raft/server/proto/: raft.proto
raft/src/: client.rs  lib.rs  main.rs  server.rs  state.rs  util.rs
raft_server/: Cargo.toml
src/: api.ts  index.ts  integration.test.ts  testUtil.ts
