[package]
name = "raft_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
once_cell = "1.8"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "raft_server"
path = "main.rs"
