[package]
name = "raft_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
once_cell = "1.8"
tracing = "0.1"
tracing-subscriber = "0.3"
bincode = "1.3.3"
tempfile = "3.15.0"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "raft_server"
path = "main.rs"
